# ROS2_cpp_python_pkg

./: CMakeLists.txt  Hi there 🤗 My name is Agwe Roy Agwe, An Electrical abd electronics engineer and also a robotic enthusiast. Here i focus ROS2 development and robot software including software for raspberry pi  README.md  class.py  cpp_header.hpp  cpp_node.cpp  module_to_import.py  package.xml  python_node.py  test.py
